<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/verde_scuro"
    tools:context=".MainActivity">

    <View
        android:id="@+id/view_Sfondo"

        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="20dp"

        android:background="@color/verde"

        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_Singleplayer"
        
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        
        android:text="@string/singleplayer"
        android:backgroundTint="@color/giallo"
        android:textColor="@color/nero"
        android:textSize="25sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.40"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button_Multiplayer"

        android:layout_width="wrap_content"
        android:layout_height="100dp"

        android:text="@string/multiplayer"
        android:backgroundTint="@color/giallo"
        android:textColor="@color/nero"
        android:textSize="25sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.70"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button_credits"

        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:text="@string/fritto_misto_games"
        android:shadowColor="@color/trasparente"
        android:background="@color/trasparente"
        android:textColor="@color/nero"
        android:textSize="25sp"
        
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>