<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/verde_scuro"
    android:backgroundTint="@color/verde_scuro"
    tools:context=".GameConfigurationActivity"
    android:visibility="visible"
    tools:visibility="visible">

    <View
        android:id="@+id/view_Sfondo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/verde"

        app:layout_constraintTop_toTopOf="@id/guideline_Horizontal_05"
        app:layout_constraintBottom_toBottomOf="@id/guideline_Horizontal_95"
        app:layout_constraintStart_toStartOf="@id/guideline_Vertical_05"
        app:layout_constraintEnd_toEndOf="@id/guideline_Vertical_95"

        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.5"
        android:visibility="visible"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textView_Game_configuration"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:text="@string/game_configuration"
        android:textColor="@color/bianco"
        android:fontFamily="@font/secular_one"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"


        app:layout_constraintTop_toTopOf="@id/guideline_Horizontal_05"
        app:layout_constraintBottom_toBottomOf="@id/guideline_Horizontal_15"
        app:layout_constraintStart_toStartOf="@id/guideline_Vertical_10"
        app:layout_constraintEnd_toEndOf="@id/guideline_Vertical_90"

        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="TextContrastCheck"
        android:visibility="visible"
        tools:visibility="visible" />

    <ImageButton
        android:id="@+id/imageButton_Dado1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:srcCompat="@drawable/dado_1"
        android:background="@color/trasparente"
        android:scaleType="fitCenter"
        android:contentDescription="@string/bottone_per_1_dado"

        app:layout_constraintTop_toTopOf="@id/guideline_Horizontal_80"
        app:layout_constraintBottom_toBottomOf="@id/guideline_Horizontal_90"
        app:layout_constraintStart_toStartOf="@id/guideline_Vertical_15"
        app:layout_constraintEnd_toEndOf="@id/guideline_Vertical_35"

        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="SpeakableTextPresentCheck"
        android:visibility="visible"
        tools:visibility="visible" />

    <ImageButton
        android:id="@+id/imageButton_Dado2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:srcCompat="@drawable/dado_2"
        android:background="@color/trasparente"
        android:scaleType="fitCenter"
        android:contentDescription="@string/bottone_per_2_dado"

        app:layout_constraintTop_toTopOf="@id/guideline_Horizontal_80"
        app:layout_constraintBottom_toBottomOf="@id/guideline_Horizontal_90"
        app:layout_constraintStart_toStartOf="@id/guideline_Vertical_40"
        app:layout_constraintEnd_toEndOf="@id/guideline_Vertical_60"

        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="SpeakableTextPresentCheck"
        android:visibility="visible"
        tools:visibility="visible" />

    <ImageButton
        android:id="@+id/imageButton_Dado3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:srcCompat="@drawable/dado_3"
        android:background="@color/trasparente"
        android:scaleType="fitCenter"
        android:contentDescription="@string/bottone_per_3_dado"

        app:layout_constraintTop_toTopOf="@id/guideline_Horizontal_80"
        app:layout_constraintBottom_toBottomOf="@id/guideline_Horizontal_90"
        app:layout_constraintStart_toStartOf="@id/guideline_Vertical_65"
        app:layout_constraintEnd_toEndOf="@id/guideline_Vertical_85"

        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="SpeakableTextPresentCheck"
        android:visibility="visible"
        tools:visibility="visible" />






    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_Vertical_meno10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="-0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_Vertical_05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_Vertical_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_Vertical_15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_Vertical_20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.20" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_Vertical_25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_Vertical_30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.30" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_Vertical_35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_Vertical_40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.40" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_Vertical_45"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.45" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_Vertical_50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_Vertical_55"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.55" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_Vertical_60"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.60" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_Vertical_65"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.65" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_Vertical_70"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.70" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_Vertical_75"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_Vertical_80"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.80" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_Vertical_85"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_Vertical_90"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.90" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_Vertical_95"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_Vertical_110"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="1.10" />




    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_Horizontal_05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_Horizontal_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_Horizontal_15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_Horizontal_20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.20" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_Horizontal_25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_Horizontal_30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.30" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_Horizontal_35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_Horizontal_40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.40" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_Horizontal_45"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_Horizontal_50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.50" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_Horizontal_55"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_Horizontal_60"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.60" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_Horizontal_65"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_Horizontal_70"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.70" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_Horizontal_75"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_Horizontal_80"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.80" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_Horizontal_85"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_Horizontal_90"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.90" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_Horizontal_95"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

</androidx.constraintlayout.widget.ConstraintLayout>